--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
+    - assets/fonts/
+
+  fonts:
+    - family: DreamGlory
+      fonts:
+        - asset: assets/fonts/DREAM GLORY.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
